* Fix Rails3 deprecation warnings

== 0.3.1 2011-02-24

* Added Rails3 compatibility

== 0.3.0 2009-01-04

* Fixed problem with DelegateClass not picking up method definitions that come after the validation_scope block.

== 0.2.0 2009-01-04

* Added basic unit tests using in-memory sqlite3

== 0.1.0 2009-01-03

* Initial release.  Only tested within an app.  Probably has lots of bugs.  Test suite forthcoming.